--- a/index.html
+++ b/index.html
@@ -10,111 +10,82 @@
 
 <body>
     <h1>Le septieme art: Quelques realisateurs</h1>
-
-    <ol>
-        <li span class="Francis" type="none"> Francis Ford Coppola</li>
-
-        <ol style="color: white;">
-            <li type="A">Apocalypse Now</li>
-            <ul style="list-style: disc;">
-                <li> Martin Shean</li>
-                <li> Marlon Brando</li>
-            </ul>
-
-            <li type="A" style="color: white;">Le Parrain</li>
-            <ul style="list-style: disc; color: white;">
-                <li>Marlon Brando</li>
-                <li>Al Pacino</li>
-                <li>Robert De Niro</li>
-
-
-            </ul>
-
-
-        </ol>
-
-
-    </ol>
-
-
-    <ol>
-        <li span class="James" type="none">James Cameron</li>
-
-        <ol>
-            <li type="A" style="color: white;">Titanic</li>
-            <ul style="list-style: disc; color: white;">
-                <li> Leonardo Dicapprio</li>
-                <li> Kate Winslet</li>
-                <li> Bill Paxton</li>
-            </ul>
-
-            <li type="A" style="color: white;">Rambo2</li>
-            <ul style="list-style: disc; color: white;">
-                <li>Sylvester Stallon</li>
-                <li>Martin Kove</li>
-
-
-            </ul>
-
-
-        </ol>
-
-
-    </ol>
-
-
-    <ol>
-        <li span class="Steven" type="none">Steven Spielberg</li>
-
-        <ol>
-            <li type="A" style="color: white;">Indiana Jones et le Temple maudit</li>
-            <ul style="list-style: disc; color: white;">
-                <li>Harison ford</li>
-                <li>Kate Capshaw</li>
-                <li>David Yip</li>
-            </ul>
-
-            <li type="A" style="color: white;">Le terminal</li>
-            <ul style="list-style: disc; color: white;">
-                <li>Tom Hanks</li>
-                <li>Catherine Zeta-Jones</li>
-                <li>Sasha Spielberg</li>
-            </ul>
-
-            <li type="A" style="color: white;">Rapport minoritaire</li>
-            <ul style="list-style: disc; color: white;">
-                <li>Tom cruise</li>
-                <li>Steve Haris</li>
-                <li>Collin Farrell</li>
-
-
-        </ol>
-
-
-    </ol>
-
-
-    <ol>
-        <li span class="George" type="none">George Lucas</li>
-
-        <ol>
-            <li type="A" style="color: white;">La guerre des etoiles(Star Wars)</li>
-            <ul style="list-style: disc; color: white;">
-                <li>Harisson Ford</li>
-                <li>Carrie Fisher</li>
-            </ul>
-
-            <li type="A" style="color: white;">Indiana Jones et le Temple maudit</li>
-            <ul style="list-style: disc; color: white;">
-                <li>Harisson ford</li>
-                <li>Kate Capshaw</li>
-                <li>David Yip</li>
-            </ul>
-
-
-        </ol>
-
-
+    <ol class="Producteurs">
+        <li>Francis Ford Coppola
+            <ol class="Film">
+                <li>Apocalypse Now
+                    <ul class="ul1">
+                        <li> Martin Shean</li>
+                        <li> Marlon Brando</li>
+                    </ul>
+                </li>
+                <li class="Parrain">Le Parrain
+                    <ul class="ul2">
+                        <li>Marlon Brando</li>
+                        <li>Al Pacino</li>
+                        <li>Robert De Niro</li>
+                    </ul>
+                </li>
+            </ol>
+        </li>
+        <li> James Cameron
+            <ol class="Film">
+                <li>Titanic
+                    <ul class="ul3">
+                        <li> Leonardo Dicapprio</li>
+                        <li> Kate Winslet</li>
+                        <li> Bill Paxton</li>
+                    </ul>
+                </li>
+                <li>Rambo2
+                    <ul class="ul4">
+                        <li>Sylvester Stallon</li>
+                        <li>Martin Kove</li>
+                    </ul>
+                </li>
+            </ol>
+        </li>
+        <li>Steven Spielberg
+            <ol class="Film">
+                <li>Indiana Jones et le Temple maudit
+                    <ul class="ul5">
+                        <li>Harison ford</li>
+                        <li>Kate Capshaw</li>
+                        <li>David Yip</li>
+                    </ul>
+                <li>Le terminal
+                    <ul class="ul6">
+                        <li>Tom Hanks</li>
+                        <li>Catherine Zeta-Jones</li>
+                        <li>Sasha Spielberg</li>
+                    </ul>
+                </li>
+                <li>Rapport minoritaire
+                    <ul class="ul7">
+                        <li>Tom cruise</li>
+                        <li>Steve Haris</li>
+                        <li>Collin Farrell</li>
+                    </ul>
+                </li>
+            </ol>
+        </li>
+        <li>George Lucas
+            <ol class="Film">
+                <li>La guerre des etoiles(Star Wars)
+                    <ul class="ul8">
+                        <li>Harisson Ford</li>
+                        <li>Carrie Fisher</li>
+                    </ul>
+                </li>
+                <li>Indiana Jones et le Temple maudit
+                    <ul class="ul9">
+                        <li>Harisson ford</li>
+                        <li>Kate Capshaw</li>
+                        <li>David Yip</li>
+                    </ul>
+                </li>
+            </ol>
+        </li>
     </ol>
 
 
